<resources>
    <string name="app_name">Wallpaper crop</string>
    <string name="wallpaper_preview_description">Wallpaper preview</string>
    <string name="crop_selected_image_description">Crop image</string>
    <string name="open_image_explorer_description">Open image explorer</string>
    <string name="tooltip_content">Choose an image using the button in the top-left or by sharing it to this app.</string>
    <string name="set_wallpaper_button">Set Wallpaper</string>
    <string name="set_wallpaper_home_option">Home screen</string>
    <string name="set_wallpaper_lockscreen_option">Lock screen</string>
    <string name="set_wallpaper_both_option">Home and lock screen</string>
    <string name="toast_wallpaper_applied">Wallpaper applied!</string>
    <string name="settings_button_description">Settings</string>
    <string name="label_open">Files</string>
    <string name="label_crop">Crop</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_settings">Settings</string>
    <string name="gallery_title">Wallpaper Gallery</string>
    <string name="gallery_button_description">Gallery</string>
    <string name="wallpaper_thumbnail">Wallpaper thumbnail</string>
    <string name="delete_images">Delete images</string>
    <string name="toast_delete_success">Delete success</string>
    <string name="toast_delete_failure">Delete failure</string>
    <string name="gallery_empty">No images found. New images will appear here after you apply wallpapers.</string>
    <string name="delete_dialog_title">Delete Images</string>
    <string name="delete_dialog_message">Are you sure you want to delete the selected images?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="settings_title">Settings</string>
    <string name="settings_header_general">General</string>
    <string name="settings_gallery_title">Enable gallery</string>
    <string name="settings_gallery_summary">Show or hide the gallery button</string>
    <string name="settings_header_data">Data</string>
    <string name="settings_wipe_title">Clear Cache</string>
    <string name="settings_wipe_summary">Delete all previous wallpapers</string>
    <string name="settings_debug_title">Debug logs</string>
    <string name="settings_debug_summary">View application events</string>
    <string name="settings_header_about">About</string>
    <string name="settings_authors_title">Authors</string>
    <string name="settings_author_makar_name">Makar Drozdik</string>
    <string name="settings_author_makar_role">Project Lead, App Architecture, Android Development (Kotlin)</string>
    <string name="settings_author_aleksandr_name">Aleksandr Haruzin</string>
    <string name="settings_author_aleksandr_role">UI Development</string>
</resources>