<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/wallpaperPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/wallpaper_preview_description"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/tooltip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:text="@string/tooltip_content"
        android:textColor="@color/text_color"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/topStartControls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/openExplorer"
            style="@style/IconButtonContainer"
            android:contentDescription="@string/open_image_explorer_description">

            <ImageView
                style="@style/ImgButtonIcon"
                android:importantForAccessibility="no"
                android:src="@drawable/open_file_explorer_button" />

            <TextView
                style="@style/ButtonLabel"
                android:text="@string/label_open" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cropImage"
            style="@style/IconButtonContainer"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/crop_selected_image_description">

            <ImageView
                style="@style/ImgButtonIcon"
                android:importantForAccessibility="no"
                android:src="@drawable/crop_image_button" />

            <TextView
                style="@style/ButtonLabel"
                android:text="@string/label_crop" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/openGallery"
            style="@style/IconButtonContainer"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/gallery_button_description">

            <ImageView
                style="@style/ImgButtonIcon"
                android:importantForAccessibility="no"
                android:src="@drawable/gallery_image_button" />

            <TextView
                style="@style/ButtonLabel"
                android:text="@string/label_gallery" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/topEndControls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/preferencesButton"
            style="@style/IconButtonContainer"
            android:contentDescription="@string/settings_button_description">

            <ImageView
                style="@style/ImgButtonIcon"
                android:importantForAccessibility="no"
                android:src="@drawable/open_settings_button" />

            <TextView
                style="@style/ButtonLabel"
                android:text="@string/label_settings" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/setWallpaperButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/set_wallpaper_button"
        android:textColor="@color/button_text"
        app:backgroundTint="@color/button_background"
        app:cornerRadius="12dp" />
</FrameLayout>