<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/optionHome"
        style="@style/OptionsButton"
        android:text="@string/set_wallpaper_home_option" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/optionLock"
        style="@style/OptionsButton"
        android:text="@string/set_wallpaper_lockscreen_option" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/optionBoth"
        style="@style/OptionsButton"
        android:text="@string/set_wallpaper_both_option" />

</LinearLayout>